--- a/App.WebApplication/Views/Contact/Index.cshtml
+++ b/App.WebApplication/Views/Contact/Index.cshtml
@@ -8,21 +8,15 @@
     int i = 0;
 }
 
-@section Scripts{
-                <script>
-                    setTimeout(function () {
-                            $('#message').fadeOut('slow');
-                    }, 2000);
-                </script>
-}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <div class="row border-1 shadow p-3 mb-5 bg-light rounded m-2">
 
     @if (ViewBag.message != null)
     {
-                  <div id="message" class="alert alert-success" role="alert">
-                           @ViewBag.message
-                  </div>      
+        <script>
+            swal("Success", "", "success");
+        </script>
     }
 
     <div class="col-3">
