--- a/App.WebApplication/Views/Shared/_Layout.cshtml
+++ b/App.WebApplication/Views/Shared/_Layout.cshtml
@@ -99,9 +99,17 @@
                                 </div>
                             </nav>
 
-                            <div>
-                                <a class="nav-link" asp-controller="Contact" asp-action="Index">Contact</a>
-                            </div>
+                            <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
+                                <a class="nav-link" asp-controller="Contact" asp-action="Index">Liên hệ</a>
+                            </nav>
+
+                            <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
+                                <a class="nav-link" asp-controller="Promotion" asp-action="Index">Khuyến mãi</a>
+                            </nav>
+
+                            <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
+                                <a class="nav-link" asp-controller="Slide" asp-action="Index">Ảnh slide</a>
+                            </nav>
 
                             </div>
                             <div class="sb-sidenav-menu-heading">Tiện ích</div>
