--- a/App.WebApplication/Views/Contact/Edit.cshtml
+++ b/App.WebApplication/Views/Contact/Edit.cshtml
@@ -2,8 +2,9 @@
 @using App.API.Infrastructure.ViewModels.Catalog.Contacts
 @model ContactEditRequest
 
+<h1 class="mt-2">Liên hệ</h1>
 
-<div class="border-1 shadow p-3 mb-5 bg-light rounded m-2">
+<div class="border-1 shadow p-3 mb-5 bg-light rounded m-2 mt-3">
         <form asp-action="Edit" method="post">
 
             <div class="form-floating mb-3">
