--- a/App.WebApplication/Views/Contact/Index.cshtml
+++ b/App.WebApplication/Views/Contact/Index.cshtml
@@ -10,6 +10,13 @@
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+<h1 class="mt-2">Liên hệ</h1>
+
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
+    <li class="breadcrumb-item active">Danh mục liên hệ</li>
+</ol>
+
 <div class="row border-1 shadow p-3 mb-5 bg-light rounded m-2">
 
     @if (ViewBag.message != null)
