--- a/App.WebApplication/Views/Shared/_Layout.cshtml
+++ b/App.WebApplication/Views/Shared/_Layout.cshtml
@@ -111,6 +111,10 @@
                                 <a class="nav-link" asp-controller="Slide" asp-action="Index">Ảnh slide</a>
                             </nav>
 
+                            <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
+                                <a class="nav-link" asp-controller="Transaction" asp-action="Index">Giao dịch</a>
+                            </nav>
+
                             </div>
                             <div class="sb-sidenav-menu-heading">Tiện ích</div>
                             <a class="nav-link" href="charts.html">
