--- a/App.WebApplication/Views/Slide/Edit.cshtml
+++ b/App.WebApplication/Views/Slide/Edit.cshtml
@@ -6,7 +6,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<div class="col-3">
+<h1 class="mt-2">SLide</h1>
+
+<div class="row border-1 shadow p-3 mb-5 bg-light rounded m-2 mt-3">
     <form asp-action="Edit" method="post" enctype="multipart/form-data">
         <div class="form-floating mb-3">
             <input type="text" asp-for="id" class="form-control" id="floatingInput" placeholder="Id" disabled>
