--- a/App.WebApplication/Views/Cart/CheckoutSucess.cshtml
+++ b/App.WebApplication/Views/Cart/CheckoutSucess.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = "_ShopLayout2";
 }
-<div class="container-fluid bg-secondary mb-5">
+<div class="container-fluid bg-secondary ">
 		<div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 300px">
 			<h1 class="font-weight-semi-bold text-uppercase mb-3">Check out Succesfully!</h1>
 			<div class="d-inline-flex">
