--- a/App.WebApplication/Views/Shared/Components/Pager/Default.cshtml
+++ b/App.WebApplication/Views/Shared/Components/Pager/Default.cshtml
@@ -30,10 +30,10 @@
         @if (Model.PageIndex != startIndex)
         {
             <li class="page-item">
-                <a class="page-link" title="1" href="@urlTemplate.Replace("{0}", "1")">Đầu</a>
+                <a class="page-link btnPlus button button-xs button-secondary button-winona" title="1" href="@urlTemplate.Replace("{0}", "1")">Đầu</a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="@urlTemplate.Replace("{0}", (Model.PageIndex-1).ToString())">Trước</a>
+                <a class="page-link btnPlus button button-xs button-secondary button-winona" href="@urlTemplate.Replace("{0}", (Model.PageIndex-1).ToString())">Trước</a>
             </li>
         }
         @for (var i = startIndex; i <= finishIndex; i++)
@@ -41,21 +41,21 @@
             if (i == Model.PageIndex)
             {
                 <li class="page-item active">
-                    <a class="page-link" href="#">@i <span class="sr-only">(current)</span></a>
+                    <a class="page-link btnPlus button button-xs button-secondary button-winona" href="#">@i <span class="sr-only">(current)</span></a>
                 </li>
             }
             else
             {
-                <li class="page-item"><a class="page-link" title="Trang @i.ToString()" href="@urlTemplate.Replace("{0}", i.ToString())">@i</a></li>
+                <li class="page-item "><a class="page-link btnPlus button button-xs button-secondary button-winona" title="Trang @i.ToString()" href="@urlTemplate.Replace("{0}", i.ToString())">@i</a></li>
             }
         }
         @if (Model.PageIndex != finishIndex)
         {
             <li class="page-item">
-                <a class="page-link" title="@Model.PageCount.ToString()" href="@urlTemplate.Replace("{0}", (Model.PageIndex+1).ToString())">Sau</a>
+                <a class="page-link btnPlus button button-xs button-secondary button-winona" title="@Model.PageCount.ToString()" href="@urlTemplate.Replace("{0}", (Model.PageIndex+1).ToString())">Sau</a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="@urlTemplate.Replace("{0}", Model.PageCount.ToString())">Cuối</a>
+                <a class="page-link btnPlus button button-xs button-secondary button-winona" href="@urlTemplate.Replace("{0}", Model.PageCount.ToString())">Cuối</a>
             </li>
         }
     </ul>
