--- a/App.WebApplication/Views/Shared/_ShopLayout2.cshtml
+++ b/App.WebApplication/Views/Shared/_ShopLayout2.cshtml
@@ -21,7 +21,6 @@
 	<link rel="stylesheet" type="text/css" href="~/css/fonts1.css">
 	<link rel="stylesheet" type="text/css" href="~/css/style1.css">
 	<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-
 	<!--[if lt IE 10]>
 	<div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
 	<script src="js/html5shiv.min.js"></script>
@@ -111,7 +110,7 @@
 											<a class="rd-nav-link" asp-controller="Shop" asp-action="Index">HOME</a>
 										</li>
 										<li class="rd-nav-item">
-											<a class="rd-nav-link" href="about-us.html">SHOPPING</a>
+											<a class="rd-nav-link" asp-controller="Shop" asp-action="Shopping">SHOPPING</a>
 										</li>
 										<li class="rd-nav-item">
 											<a class="rd-nav-link" href="typography.html">FAQ</a>
