--- a/App.WebApplication/Views/Size/Edit.cshtml
+++ b/App.WebApplication/Views/Size/Edit.cshtml
@@ -10,7 +10,7 @@
 
 <h4>Size</h4>
 <hr />
-<div class="row">
+<div class="row border-1 shadow p-3 mb-5 bg-light rounded m-2">
     <div class="col-md-4">
         <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -26,12 +26,9 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">Danh sách size</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
