--- a/App.WebApplication/Views/Slide/Index.cshtml
+++ b/App.WebApplication/Views/Slide/Index.cshtml
@@ -3,6 +3,7 @@
 @model SlideModel
 
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Index";
     var lst = ViewData["lst"] as List<Slide>;
     int i = 0;
