--- a/App.WebApplication/Views/ProductVariation/Create.cshtml
+++ b/App.WebApplication/Views/ProductVariation/Create.cshtml
@@ -10,7 +10,7 @@
 
 <h4>ProductCreateRequest</h4>
 <hr />
-<div class="row">
+<div class="row border-1 shadow p-3 mb-5 bg-light rounded m-2">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -36,11 +36,8 @@
             </div>        
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">Danh sách biên thể</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
