--- a/App.WebApplication/Views/Promotion/Index.cshtml
+++ b/App.WebApplication/Views/Promotion/Index.cshtml
@@ -3,6 +3,7 @@
 @model PromotionAddRequest
 
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Index";
     var lst = ViewData["lst"] as List<Promotion>;
     int i = 0;
@@ -30,44 +31,44 @@
         <form asp-action="Add" method="post">
 
             <div class="form-floating mb-3">
-              <input type="text" asp-for="Name" class="form-control" id="floatingInput" placeholder="Nhãn hiệu">
-              <label for="floatingInput">Tên</label>
+                <input type="text" asp-for="Name" class="form-control" id="floatingInput" placeholder="Tên">
+                <label for="floatingInput">Tên</label>
               <span class="text-danger" asp-validation-for="Name"></span>
             </div>
 
              <div class="form-floating mb-3">
               <input type="date" asp-for="FromDate" class="form-control" id="floatingInput" placeholder="Ngày bắt đầu">
-              <label for="floatingInput">Ngày bắt đầu</label>
+                <label for="floatingInput">Ngày bắt đầu</label>
               <span class="text-danger" asp-validation-for="FromDate"></span>
             </div>
 
              <div class="form-floating mb-3">
               <input type="date" asp-for="ToDate" class="form-control" id="floatingInput" placeholder="Ngày kết thúc">
-              <label for="floatingInput">Ngày kết thúc</label>
+                <label for="floatingInput">Ngày kết thúc</label>
               <span class="text-danger" asp-validation-for="ToDate"></span>
             </div>
 
             <div class="form-floating mb-3">
               <input type="number" asp-for="DiscountAmount" class="form-control" id="floatingInput" placeholder="Mức giảm">
-              <label for="floatingInput">Mức giảm</label>
+                <label for="floatingInput">Mức giảm</label>
               <span class="text-danger" asp-validation-for="DiscountAmount"></span>
             </div>
 
             <div class="form-floating mb-3">
               <input type="number" asp-for="DiscountPercent" class="form-control" id="floatingInput" placeholder="Phần trăm triết khấu">
-              <label for="floatingInput">Phần trăm triết khấu</label>
+                <label for="floatingInput">Phần trăm triết khấu</label>
               <span class="text-danger" asp-validation-for="DiscountPercent"></span>
             </div>
 
              <div class="form-floating mb-3">
               <input type="text" asp-for="ProductCategoryIds" class="form-control" id="floatingInput" placeholder="Danh mục sản phẩm">
-              <label for="floatingInput">Danh mục sản phẩm</label>
+                <label for="floatingInput">Danh mục sản phẩm</label>
               <span class="text-danger" asp-validation-for="ProductCategoryIds"></span>
             </div>
 
              <div class="form-floating mb-3">
               <input type="text" asp-for="ProductIds" class="form-control" id="floatingInput" placeholder="Sản Phẩm">
-              <label for="floatingInput">Sản phẩm</label>
+                <label for="floatingInput">Sản Phẩm</label>
               <span class="text-danger" asp-validation-for="ProductIds"></span>
             </div>
 
