--- a/App.WebApplication/Views/Shared/_ShopLayout2.cshtml
+++ b/App.WebApplication/Views/Shared/_ShopLayout2.cshtml
@@ -279,6 +279,9 @@
 	<script src="~/js/script.js"></script>
 	<script src="~/js/site.js"></script>
 	@await RenderSectionAsync("Scripts", required: false)
+	 <script src="~/js/jquery/dist/jquery.js"></script>
+        <script src="~/js/jquery-validation/dist/jquery.validate.js"></script>
+        <script src="~/js/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 	<!-- coded by Himic-->
 </body>
 </html>
