--- a/App.WebApplication/Views/Size/Index.cshtml
+++ b/App.WebApplication/Views/Size/Index.cshtml
@@ -4,6 +4,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section Scripts{
 	<script>
