--- a/App.WebApplication/Views/Account/Register.cshtml
+++ b/App.WebApplication/Views/Account/Register.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Register";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "_ShopLayout2";
 }
 
 <h1>Register</h1>
