--- a/App.WebApplication/Views/Contact/Edit.cshtml
+++ b/App.WebApplication/Views/Contact/Edit.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Data.Entities
 @using App.API.Infrastructure.ViewModels.Catalog.Contacts
 @model ContactEditRequest
-
+@{
+    Layout = "_Layout";
+}
 <h1 class="mt-2">Liên hệ</h1>
 
 <div class="border-1 shadow p-3 mb-5 bg-light rounded m-2 mt-3">
