--- a/App.WebApplication/Views/Contact/Index.cshtml
+++ b/App.WebApplication/Views/Contact/Index.cshtml
@@ -3,6 +3,7 @@
 @model ContactAddRequest
 
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Index";
     var lst = ViewData["lst"] as List<Contact>;
     int i = 0;
