--- a/App.WebApplication/Views/Promotion/Edit.cshtml
+++ b/App.WebApplication/Views/Promotion/Edit.cshtml
@@ -1,6 +1,8 @@
 ﻿@using App.API.Infrastructure.ViewModels.Catalog.Promotion
 @model PromotionEditRequest
-
+@{
+    Layout = "_Layout";
+}
   
 <h1 class="mt-2">Khuyến mãi</h1>
 
