--- a/App.WebApplication/Views/Promotion/Index.cshtml
+++ b/App.WebApplication/Views/Promotion/Index.cshtml
@@ -3,6 +3,7 @@
 @model PromotionAddRequest
 
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Index";
     var lst = ViewData["lst"] as List<Promotion>;
     int i = 0;
