--- a/App.WebApplication/Views/Transaction/Index.cshtml
+++ b/App.WebApplication/Views/Transaction/Index.cshtml
@@ -4,6 +4,7 @@
 @model TransactionAddRequest
 
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Index";
     var lst = ViewData["lst"] as List<TransactionViewModel>;
     int i = 0;
