--- a/App.WebApplication/Views/Shared/Components/BillDetail/BillDetail.cshtml
+++ b/App.WebApplication/Views/Shared/Components/BillDetail/BillDetail.cshtml
@@ -4,18 +4,17 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    var a = User.Identity.IsAuthenticated;
 }
 <div class="">
     <h4 class="font-weight-semi-bold  card-header bg-secondary border-0">Billing Address</h4>
     <div class="row text-left">
         <div class="col-md-6 form-group ">
             <label class="font-weight-bold ">First Name</label>
-            <input asp-for="FirstName" class="form-control" readonly="@a.ToString()" placeholder="John">
+            <input asp-for="FirstName" class="form-control" placeholder="John">
         </div>
         <div class="col-md-6 form-group">
             <label class="font-weight-bold ">Last Name</label>
-            <input asp-for="LastName" class="form-control"  readonly="@a.ToString()" placeholder="Doe">
+            <input asp-for="LastName" class="form-control"   placeholder="Doe">
         </div>
         <div class="col-md-6 form-group">
             <label class="font-weight-bold ">E-mail</label>
