--- a/App.WebApplication/Views/Slide/Index.cshtml
+++ b/App.WebApplication/Views/Slide/Index.cshtml
@@ -3,6 +3,7 @@
 @model SlideModel
 
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Index";
     var lst = ViewData["lst"] as List<Slide>;
     int i = 0;
@@ -79,7 +80,10 @@
                     <tr>
                         <td>@(++i)</td>
                         <td>@x.Name</td>
-                        <td><img style="width:100px;height:100px;" src="/images/SlideImage/@x.Image" /></td>
+                        @{
+                            var a = "https://localhost:7100/" + x.Image;
+                        }
+                        <td><img style="width:100px;height:100px;" src="@a" /></td>
                         <td>@x.Description</td>
                         <td>@x.SortOrder</td>
                         <td><a asp-action="Delete" asp-route-id="@x.Id" class="btn btn-danger">Xóa</a>||<a asp-action="Edit" asp-route-id="@x.Id" class="btn btn-primary">Sửa</a></td>
